# sfml.rb

./: CMakeLists.txt  LICENSE  README.md  Rakefile  sfml.gemspec
ext/: auxlib.rb  circle.c  clock.c  color.c  display.c  drawable.c  event.c  event_name.c  exceptions.c  ext.c  extconf.rb  image.c  keyboard.c  mode.c  msys2.sh  polygon.c  rect.c  rectangle.c  render_state.c  sprite.c  state.c  style_name.c  target.c  texture.c  transform.c  transformable.c  vec2.c  video_mode.c  view.c  window.c
ext/ext/: exceptions.h  module.h  rect.h  sfml.h  style_name.h  vec2.h
ext/ext/klass/: clock.h  color.h  display.h  event.h  keyboard.h  mode.h  render_state.h  state.h  target.h  transform.h  transformable.h  video_mode.h  view.h  window.h
ext/ext/klass/drawable/: circle.h  image.h  polygon.h  rectangle.h  sprite.h  texture.h
ext/ext/klass/event/: event_name.h
ext/ext/module/: transform.h
ext/ext/module/drawable/: drawable.h
lib/sfml/: version.rb
test/: hello-world.rb  matrix-transformable.rb
